# gov-writer

./: README.md  pyproject.toml  render.yaml
frontend/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiKeyBanner.tsx
frontend/src/hooks/: useLLMSettings.ts
frontend/src/lib/: api.ts  speech-data.ts
frontend/src/routes/: ExplainPage.tsx  ExplainWriter.tsx  HistoryPage.tsx  HubPage.tsx  PersonasPage.tsx  PlaceholderPage.tsx  ResultPage.tsx  SettingsPage.tsx  SpeechWriter.tsx  WritePage.tsx
src/gov_writer/: __init__.py  config.py  server.py
src/gov_writer/api/: __init__.py  download.py  drafts.py  explain.py  personas.py  press.py  rag.py  refine.py  settings.py  speech.py
src/gov_writer/db/: __init__.py  drafts.py  personas.py
src/gov_writer/exporters/: __init__.py  converters.py
src/gov_writer/extractors/: __init__.py  files.py
src/gov_writer/llm/: __init__.py  client.py
src/gov_writer/policy_api/: __init__.py  ministries.py  press_release.py
src/gov_writer/prompts/: __init__.py  builder.py  l1_identity.py  l2_domain.py  l3_rules.py
src/gov_writer/rag/: __init__.py  chunker.py  embedding.py  search.py  supabase_client.py  sync.py
supabase/migrations/: 001_init.sql
